# sophon-tools

./: .gitignore  LICENSE  README.md  release.sh
source/pSophUI/: .gitignore  readme.md
source/pSophUI/SophUI/: .gitignore  Makefile  SophUI.pro  font.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_mainwindow.cpp  moc_predefs.h  qrc_resource.cpp  readme.md
source/pSophUI/SophUI/deb/DEBIAN/: control  postinst  prerm
source/pSophUI/SophUI/deb/bm_services/SophonHDMI/: hdmi_status.sh  run_hdmi_show.sh
source/pSophUI/SophUI/deb/bm_services/SophonHDMI/demos/: readme
source/pSophUI/SophUI/deb/etc/systemd/system/: SophonHDMI.service  SophonHDMIStatus.service
source/pSophUI/SophUI/lxqt_qtermwidget_qt5.12/include/qtermwidget5/: qtermwidget_export.h
source/pSophUI/SophUI/lxqt_qtermwidget_qt5.12/lib/: libqtermwidget5.so.0.17.0
source/pSophUI/SophUI/lxqt_qtermwidget_qt5.12/lib/cmake/qtermwidget5/: qtermwidget5-config-version.cmake  qtermwidget5-config.cmake  qtermwidget5-targets-release.cmake  qtermwidget5-targets.cmake
source/pSophUI/SophUI/lxqt_qtermwidget_qt5.12/lib/pkgconfig/: qtermwidget5.pc
source/pSophUI/SophUI/lxqt_qtermwidget_qt5.12/share/qtermwidget5/translations/: qtermwidget_bg.qm  qtermwidget_cs.qm  qtermwidget_da.qm  qtermwidget_de.qm  qtermwidget_el.qm  qtermwidget_es.qm  qtermwidget_et.qm  qtermwidget_fr.qm  qtermwidget_he.qm  qtermwidget_hr.qm  qtermwidget_hu.qm  qtermwidget_it.qm  qtermwidget_ja.qm  qtermwidget_lt.qm  qtermwidget_nb_NO.qm  qtermwidget_pt.qm  qtermwidget_pt_BR.qm  qtermwidget_ru.qm  qtermwidget_tr.qm  qtermwidget_zh_CN.qm
source/pSophUI/SophUI/resource/: en_US.qm  en_US.ts  resource.qrc
source/pbmsec/: .gitignore  release.sh
source/pbmsec/deb/DEBIAN/: control  postinst  postrm  preinst
source/pbmsec/deb/etc/systemd/system/: bmsec-auto-start.service
source/pbmsec/deb/opt/sophon/bmsec/: bmsec
source/pbmsec/deb/opt/sophon/bmsec/binTools/: bm_make_package.sh  flash_update  killPros  memory_edit_v2.8.tar.xz  socBak.sh
source/pbmsec/deb/opt/sophon/bmsec/commands/: _confNetwork.sh  _reset_all.sh  _update_sub.sh  confMem.sh  downFile.sh  (+15 more)
source/pbmsec/doc/: 00_README_zh.md  01_README_en.md  10_UserReferenceDocumentation_zh.md
source/pdfss_cpp/: .gitignore  readme.md
source/pdfss_cpp/dfss-cpp-main/: linux_release.sh  readme.md
source/pdfss_cpp/dfss_pip/: .gitignore  README.md  setup.py
source/pdfss_cpp/dfss_pip/dfss/: __main__.py
source/pdfss_cpp/dfss_pip/dfss/output/: .gitignore
source/pdfss_cpp/libs/: build_libs.sh
source/pdfss_cpp/src/: Makefile  dfss-config.json  main.cpp
source/pget_info/: .gitignore  get_info.sh  get_info_log_to_png.py  get_info_log_to_png.yaml  readme.md  release.sh
source/pmemory_edit/: .gitignore  readme.md  release.sh
source/pmemory_edit/source/deb/DEBIAN/: control  postinst  postrm  preinst
source/pmemory_edit/source/memory_edit/: memory_edit.sh
source/pmemory_edit/source/memory_edit/bintools/: cpio  dtc  dumpimage  file  mkimage
source/pmemtest/: .gitignore  readme.md  release.sh
source/pmemtest/memtest_a53_gdma/: clean.sh  logs_check.sh  start.sh
source/pmemtest/memtest_a53_gdma/memtest_gdma/: .gitignore  Makefile  build.sh  memtest_gdma.c
source/pmemtest/memtest_a53_gdma/memtester_dir/: memtester
source/pota_update/: ota_update.sh  readme.md  release.sh
source/pota_update/arm64_bin/: bc
source/pqt_batch_deployment/: .astylerc  .gitignore  CMakeLists.txt  README_EN.md  datatypes.h  formatFiles.sh  linux_docker.sh  linux_release.sh  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  remotesshoperation.cpp  remotesshoperation.h  resources.qrc  tableDelegates.h  windows_release.ps1
source/pqt_batch_deployment/libs/: libssh2-1.11.0.7z
source/pqt_batch_deployment/libs/Appdir/: qt_batch_deployment.desktop  qt_batch_deployment_no_ui.desktop
source/pqt_batch_deployment/libs/linux_amd64/openssl/include/openssl/: asn1err.h  bnerr.h
source/pqt_batch_deployment/libs/linux_amd64/release/lib/cmake/libssh2/: Libssh2Config-release.cmake  Libssh2Config.cmake  Libssh2ConfigVersion.cmake
source/pqt_batch_deployment/libs/win_amd64/: qt_batch_deployment_boxed.evb
source/pqt_batch_deployment/libs/win_amd64/openssl/lib/: libcrypto.lib
source/pqt_batch_deployment/libs/win_amd64/openssl/lib/pkgconfig/: libcrypto.pc  openssl.pc
source/pqt_batch_deployment/libs/win_amd64/release/lib/cmake/libssh2/: Libssh2Config-release.cmake  Libssh2Config.cmake
source/pqt_batch_deployment/libs/win_amd64/release/lib/pkgconfig/: libssh2.pc
source/pqt_batch_deployment/no_ui/: CMakeLists.txt  argsparse.cpp  argsparse.h  main.cpp
source/pqt_batch_deployment/resources/: theme.qss
source/pqt_batch_deployment/resources/batchConf/: inSE6conf.json  outSE6conf.json
source/pqt_memory_edit/: .gitignore  CMakeLists.txt  batch.cpp  batch.h  batch.ui  linux_docker.sh  linux_release.sh  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  memoryedit.cpp  memoryedit.h  resources.qrc  version.h.in  windows_release.ps1
source/pqt_memory_edit/batchConf/: inSE6conf.json  outSE6conf.json
source/pqt_memory_edit/libs/: zlib-1.2.13.7z
source/pqt_memory_edit/libs/Appdir/: qt_mem_edit.desktop
source/pqt_memory_edit/libs/linux_amd64/openssl/include/openssl/: evperr.h  x509v3.h
source/pqt_memory_edit/libs/linux_amd64/release/lib/: libssh2.so.1  libz.so.1
source/pqt_memory_edit/libs/linux_arm64/release/lib/: libssh2.so.1  libz.so.1
source/pqt_memory_edit/libs/win_amd64/: qt_mem_edit_boxed.evb
source/pqt_memory_edit/libs/win_amd64/openssl/lib/pkgconfig/: libssl.pc
source/pqt_memory_edit/libs/win_amd64/release/lib/cmake/libssh2/: Libssh2Config.cmake
source/psocbak/: readme.md  release.sh
source/psocbak/socbak/: socbak.sh  socbak_md5.txt
source/psocbak/socbak/binTools/: advcp  advmv  compile_et  flash_update  fsck.fat  mk_cmds  mk_gpt  mkfs.fat  pigz
source/psocbak/socbak/script/bm1684/: bm_make_package.sh
source/psocbak/socbak/script/bm1688/: bm_make_package.sh
source/psoph_phytool/: sophon_phytool.sh
source/pspacc_efuse_demo/: .gitignore  spacc_efuse_demo.c
(+15 files in other folders)
